@@ -1,0 +1,3 @@
+explain void f( int ()() )
+                    ^
+21: error: function returning function; did you mean function returning pointer to function?
